--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -24,12 +24,8 @@ jobs:
         pip install -r requirements.txt
     - name: Build with Pyinstaller
       run: pyinstaller --onedir --add-data "projects;projects" --add-data "logs;logs" console.py
-    - name: Zip build result
-      run: |
-        cd dist
-        zip -r console.zip console
     - name: Upload the zip file as artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4.3.1
       with:
         name: build-console
-        path: dist/console.zip
+        path: dist/console/*
