[skip ci] Fix translator, again and again

--- a/.github/workflows/translator.yml
+++ b/.github/workflows/translator.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           response=$(curl -s -X POST https://api.chatanywhere.cn/v1/chat/completions \
             -H "Content-Type: application/json" \
-            -H "Authorization: Bearer ${{ secrets.GPT_API_KEY }}" \
+            -H "Authorization: Bearer \${{ secrets.GPT_API_KEY }}" \
             -d '{
               "model": "gpt-3.5-turbo",
               "messages": [
@@ -34,7 +34,7 @@ jobs:
                 }
               ]
             }')
-          echo "::set-output name=translated::$(echo $response | jq -r '.choices[0].message.content')"
+          echo "::set-output name=translated::\$(echo \$response | jq -r '.choices[0].message.content')"
 
       - name: Commit translated README
         run: |
