[skip ci] Last time, please

--- a/.github/workflows/translator.yml
+++ b/.github/workflows/translator.yml
@@ -30,7 +30,7 @@ jobs:
                 },
                 {
                   "role": "user",
-                  "content": "Original text: $(cat README.md)"
+                  "content": "Original text: \$(cat README.md)"
                 }
               ]
             }')
