[skip ci] Update translator.yml

--- a/.github/workflows/translator.yml
+++ b/.github/workflows/translator.yml
@@ -20,21 +20,21 @@ jobs:
         run: |
           response=$(curl -s -X POST https://api.chatanywhere.cn/v1/chat/completions \
             -H "Content-Type: application/json" \
-            -H "Authorization: Bearer \${{ secrets.GPT_API_KEY }}" \
-            -d '{
-              "model": "gpt-3.5-turbo",
-              "messages": [
+            -H "Authorization: Bearer ${{ secrets.GPT_API_KEY }}" \
+            -d "{
+              \"model\": \"gpt-3.5-turbo\",
+              \"messages\": [
                 {
-                  "role": "system",
-                  "content": "Please translate the text into Chinese. Don't respond anything else, but only the translated text."
+                  \"role\": \"system\",
+                  \"content\": \"Please translate the text into Chinese. Don't respond anything else, but only the translated text.\"
                 },
                 {
-                  "role": "user",
-                  "content": "Original text: \$(cat README.md)"
+                  \"role\": \"user\",
+                  \"content\": \"Original text: $(cat README.md)\"
                 }
               ]
             }')
-          echo "::set-output name=translated::\$(echo \$response | jq -r '.choices[0].message.content')"
+          echo "::set-output name=translated::$(echo \$response | jq -r \".choices[0].message.content\")"
 
       - name: Commit translated README
         run: |
